--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,6 +6,9 @@
     height: 100%;
     box-shadow: 2px 2px 6px rgba(0%, 0%, 0%, 0.18);
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
     h2 {
         padding: 2rem;
     }
@@ -56,4 +59,9 @@
 
 .selected {
     background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+}
+
+.active-library {
+    transform: translateX(0);
+    opacity: 1;
 }
