mobile design updated

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -1,6 +1,7 @@
 .library {
     position: fixed;
     top: 0;
+    border-radius: 1rem;
     left: 0;
     width: 20rem;
     height: 100%;
@@ -8,6 +9,7 @@
     overflow: scroll;
     transform: translateX(-100%);
     transition: all 0.5s ease;
+    background: white;
     opacity: 0;
     h2 {
         padding: 2rem;
@@ -19,6 +21,7 @@
     align-items: center;
     padding: 1rem 2rem;
     cursor: pointer;
+    transform: all 0.75s ease-out;
     img {
         width: 30%;
     }
@@ -64,4 +67,10 @@
 .active-library {
     transform: translateX(0);
     opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .library {
+        width: 100%;
+    }
 }
