--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -5,7 +5,7 @@ nav {
     align-items: center;
     button {
         background: transparent;
-        outline: 1px solid rgb(65, 65, 65);
+        border: 1px solid rgb(65, 65, 65);
         border: none;
         cursor: pointer;
         padding: 0.5rem;
@@ -13,6 +13,14 @@ nav {
         &:hover {
             background: rgb(65, 65, 65);
             color: white;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        button {
+            z-index: 10;
         }
     }
 }
