--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -9,9 +9,10 @@
 .time-control {
     width: 50%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     input {
         width: 100%;
-        padding: 1rem 0rem;
     }
     p {
         padding: 1rem;
@@ -26,5 +27,14 @@
     width: 30%;
     svg {
         cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .time-control {
+        width: 90%;
+    }
+    .play-control {
+        width: 60%;
     }
 }
